@@ -1,5 +1,6 @@
 Development
-    Add mimetypes for matroska audio and video files
+	Add embed 'showcontrols' option and 'onendofstream' event
+    	Add mimetypes for matroska audio and video files
 	Remove gthread from the list of requirements
 0.7.0
     	Limit bitrate requests to 5 per item, should prevent CPU peg
